--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-bla
+<HTML>
+    <HEAD>
+        <title>Minha Primeira Página WEB</title>
+    </HEAD>
+
+    <body>
+        <h1>Primeira Página WEB</h1>
+        <button>Botãozinho</button>
+    </body>
+
+</HTML>
