--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <body>
         <h1>Primeira Página WEB</h1>
         <button>Botãozinho</button>
+        <h1>Comandos GIT</h1>
+        <ul>
+            <li>gir init- criar um repositório;</li>
+            <li>git add [file] : Adiciona um arquivo no stage;</li>
+            <li>git status : Exibe o estado do repositório;</li>
+            <li>git commit -m "msg" : Cria um commit</li>
+            <li>git log : Exibe o commits do repositório, da branch atual;</li>
+            <li>git checkout referencia : Recupera o conteúdo da referencia para WK</li>
+
+        </ul>
+
+
     </body>
 
 </HTML>
