Lista de comandos git

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <li>git add [file] : Adiciona um arquivo no stage;</li>
             <li>git status : Exibe o estado do repositório;</li>
             <li>git commit -m "msg" : Cria um commit</li>
-            <li>git log : Exibe o commits do repositório, da branch atual;</li>
+            <li>git log : Exibe o commits do repositório da branch atual;</li>
             <li>git checkout referencia : Recupera o conteúdo da referencia para WK</li>
 
         </ul>
