--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
         <button>Botãozinho</button>
         <h1>Comandos GIT</h1>
         <ul>
-            <li>gir init- criar um repositório;</li>
-            <li>git add [file] : Adiciona um arquivo no stage;</li>
-            <li>git status : Exibe o estado do repositório;</li>
+            <li>gir init- criar um repositório</li>
+            <li>git add [file] : Adiciona um arquivo no stage</li>
+            <li>git status : Exibe o estado do repositório</li>
             <li>git commit -m "msg" : Cria um commit</li>
             <li>git log : Exibe o commits do repositório da branch atual;</li>
             <li>git checkout referencia : Recupera o conteúdo da referencia para WK</li>
+            <li>git remote add nome url : Definir um repositório remoto</li>
+            <li>git push url branch : Envia a branch para o repositório remoto</li>
 
         </ul>
 
