Testando em casa

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li>git push url branch : Envia a branch para o repositório remoto</li>
             <li>git log --oneline : Exibe os commits do repositório da branch atual de forma simplificada</li>
             <li>git reset referencia --hard</li>
-            <li>git checkout -b novabranch [referencia]</li>
+            <li>git checkout -b novabranch [referencia] : Cria uma nova branch</li>
 
         </ul>
 
