--- a/index.html
+++ b/index.html
@@ -1,28 +1,20 @@
-<HTML>
-    <HEAD>
-        <title>Minha Primeira Página WEB</title>
-    </HEAD>
-
-    <body>
-        <h1>Primeira Página WEB</h1>
-        <button>Botãozinho</button>
-        <h1>Comandos GIT</h1>
-        <ul>
-            <li>gir init : Cria um repositório</li>
-            <li>git add [file] : Adiciona um arquivo no stage</li>
-            <li>git status : Exibe o estado do repositório</li>
-            <li>git commit -m "msg" : Cria um commit</li>
-            <li>git log : Exibe os commits do repositório da branch atual;</li>
-            <li>git checkout referencia : Recupera o conteúdo da referencia para WK</li>
-            <li>git remote add nome url : Definir um repositório remoto</li>
-            <li>git push url branch : Envia a branch para o repositório remoto</li>
-            <li>git log --oneline : Exibe os commits do repositório da branch atual de forma simplificada</li>
-            <li>git reset referencia --hard</li>
-            <li>git checkout -b novabranch [referencia] : Cria uma nova branch</li>
-
-        </ul>
-
-
-    </body>
-
-</HTML>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        h2{color:fuchsia}
+        li{color: fuchsia;}
+    </style>
+</head>
+<body>
+    <h2>Aulas</h2>
+    <ul>
+        <li> <a href="./svc.html">Aula 1 - Plano de ensino e Git</li></a>
+        <li> <a href="./historiaweb.html">Aula 2 -História da Web, arquitetura cliente servidor e HTTP</li></a>
+        <li> <a href="./html.html">Aula 3 - HTML, tags, texto, listas e tabelas</li></a>
+    </ul>
+</body>
+</html>
